# poker-hand-evaluator

./: .gitignore  README.md  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py
backend/engine/: card.py  constants.py  deck.py  evaluator.py  hands.py
backend/tests/: test_api.py  test_card.py  test_deck.py  test_evaluator.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts
frontend/src/app/components/card-picker/: card-picker.html  card-picker.spec.ts  card-picker.ts
frontend/src/app/components/hand-display/: hand-display.html  hand-display.spec.ts  hand-display.ts
frontend/src/app/components/result-display/: result-display.html  result-display.spec.ts  result-display.ts
frontend/src/app/layout/: layout.html  layout.spec.ts  layout.ts
frontend/src/app/pages/hand-evaluator/: hand-evaluator.html  hand-evaluator.spec.ts  hand-evaluator.ts
frontend/src/app/services/: poker.service.spec.ts  poker.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
