[project]
name = "poker-hand-evaluator"
version = "1.0.0"
description = "A poker hand evaluator built with Django and Angular"
requires-python = ">=3.10"
dependencies = [
    "django>=6.0,<7.0",
    "djangorestframework>=3.17,<4.0",
    "django-cors-headers>=4.9,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]